// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ThumbnailSelector no thumbnails 1`] = `
<View
  collapsable={false}
  onLayout={[Function]}
  style={
    {
      "elevation": 1,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
      "transform": [
        {
          "translateY": 1334,
        },
      ],
      "zIndex": 1,
    }
  }
  testID="ThumbnailSelector"
>
  <RCTScrollView
    data={[]}
    extraData={-1}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={true}
    initialNumToRender={0}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={0.0001}
    stickyHeaderIndices={[]}
    style={
      {
        "backgroundColor": "grey",
        "padding": 8,
      }
    }
    testID="thumbnail-selector-flatlist"
    viewabilityConfigCallbackPairs={[]}
  >
    <View />
  </RCTScrollView>
</View>
`;

exports[`ThumbnailSelector with onSelect prop 1`] = `
<View
  collapsable={false}
  onLayout={[Function]}
  style={
    {
      "elevation": 1,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
      "transform": [
        {
          "translateY": 1334,
        },
      ],
      "zIndex": 1,
    }
  }
  testID="ThumbnailSelector"
>
  <RCTScrollView
    data={
      [
        {
          "caption": "Caption 1",
          "imageSrc": {
            "uri": "https://reactnative.dev/img/tiny_logo.png",
          },
        },
        {
          "caption": "Caption 2",
          "imageSrc": {
            "uri": "https://reactnative.dev/img/tiny_logo.png",
          },
        },
        {
          "caption": "Caption 3: this is a really long caption",
          "imageSrc": {
            "uri": "https://reactnative.dev/img/tiny_logo.png",
          },
        },
        {
          "imageSrc": {
            "uri": "https://reactnative.dev/img/tiny_logo.png",
          },
        },
      ]
    }
    extraData={3}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={true}
    initialNumToRender={4}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={0.0001}
    stickyHeaderIndices={[]}
    style={
      {
        "backgroundColor": "grey",
        "padding": 8,
      }
    }
    testID="thumbnail-selector-flatlist"
    viewabilityConfigCallbackPairs={[]}
  >
    <View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
              "padding": 8,
            }
          }
          testID="thumbnail-item-button-0"
        >
          <Image
            source={
              {
                "uri": "https://reactnative.dev/img/tiny_logo.png",
              }
            }
            style={
              [
                {
                  "borderColor": "black",
                },
                {
                  "borderWidth": 1,
                  "height": 136,
                  "width": 136,
                },
              ]
            }
            testID="thumbnail-item-image-0"
          />
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "color": "black",
                },
                {
                  "fontSize": 16,
                  "fontWeight": "bold",
                  "textAlign": "center",
                },
              ]
            }
            testID="thumbnail-item-text-0"
          >
            Caption 1
          </Text>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
              "padding": 8,
            }
          }
          testID="thumbnail-item-button-1"
        >
          <Image
            source={
              {
                "uri": "https://reactnative.dev/img/tiny_logo.png",
              }
            }
            style={
              [
                {
                  "borderColor": "black",
                },
                {
                  "borderWidth": 1,
                  "height": 136,
                  "width": 136,
                },
              ]
            }
            testID="thumbnail-item-image-1"
          />
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "color": "black",
                },
                {
                  "fontSize": 16,
                  "fontWeight": "bold",
                  "textAlign": "center",
                },
              ]
            }
            testID="thumbnail-item-text-1"
          >
            Caption 2
          </Text>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
              "padding": 8,
            }
          }
          testID="thumbnail-item-button-2"
        >
          <Image
            source={
              {
                "uri": "https://reactnative.dev/img/tiny_logo.png",
              }
            }
            style={
              [
                {
                  "borderColor": "black",
                },
                {
                  "borderWidth": 1,
                  "height": 136,
                  "width": 136,
                },
              ]
            }
            testID="thumbnail-item-image-2"
          />
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "color": "black",
                },
                {
                  "fontSize": 16,
                  "fontWeight": "bold",
                  "textAlign": "center",
                },
              ]
            }
            testID="thumbnail-item-text-2"
          >
            Caption 3: t...
          </Text>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
              "padding": 8,
            }
          }
          testID="thumbnail-item-button-3"
        >
          <Image
            source={
              {
                "uri": "https://reactnative.dev/img/tiny_logo.png",
              }
            }
            style={
              [
                {
                  "borderColor": "white",
                },
                {
                  "borderWidth": 1,
                  "height": 136,
                  "width": 136,
                },
              ]
            }
            testID="thumbnail-item-image-3"
          />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`ThumbnailSelector without onSelect prop 1`] = `
<View
  collapsable={false}
  onLayout={[Function]}
  style={
    {
      "elevation": 1,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
      "transform": [
        {
          "translateY": 1334,
        },
      ],
      "zIndex": 1,
    }
  }
  testID="ThumbnailSelector"
>
  <RCTScrollView
    data={
      [
        {
          "caption": "Caption 1",
          "imageSrc": {
            "uri": "https://reactnative.dev/img/tiny_logo.png",
          },
        },
        {
          "caption": "Caption 2",
          "imageSrc": {
            "uri": "https://reactnative.dev/img/tiny_logo.png",
          },
        },
        {
          "caption": "Caption 3: this is a really long caption",
          "imageSrc": {
            "uri": "https://reactnative.dev/img/tiny_logo.png",
          },
        },
        {
          "imageSrc": {
            "uri": "https://reactnative.dev/img/tiny_logo.png",
          },
        },
      ]
    }
    extraData={3}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={true}
    initialNumToRender={4}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={0.0001}
    stickyHeaderIndices={[]}
    style={
      {
        "backgroundColor": "grey",
        "padding": 8,
      }
    }
    testID="thumbnail-selector-flatlist"
    viewabilityConfigCallbackPairs={[]}
  >
    <View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
              "padding": 8,
            }
          }
          testID="thumbnail-item-button-0"
        >
          <Image
            source={
              {
                "uri": "https://reactnative.dev/img/tiny_logo.png",
              }
            }
            style={
              [
                {
                  "borderColor": "black",
                },
                {
                  "borderWidth": 1,
                  "height": 136,
                  "width": 136,
                },
              ]
            }
            testID="thumbnail-item-image-0"
          />
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "color": "black",
                },
                {
                  "fontSize": 16,
                  "fontWeight": "bold",
                  "textAlign": "center",
                },
              ]
            }
            testID="thumbnail-item-text-0"
          >
            Caption 1
          </Text>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
              "padding": 8,
            }
          }
          testID="thumbnail-item-button-1"
        >
          <Image
            source={
              {
                "uri": "https://reactnative.dev/img/tiny_logo.png",
              }
            }
            style={
              [
                {
                  "borderColor": "black",
                },
                {
                  "borderWidth": 1,
                  "height": 136,
                  "width": 136,
                },
              ]
            }
            testID="thumbnail-item-image-1"
          />
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "color": "black",
                },
                {
                  "fontSize": 16,
                  "fontWeight": "bold",
                  "textAlign": "center",
                },
              ]
            }
            testID="thumbnail-item-text-1"
          >
            Caption 2
          </Text>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
              "padding": 8,
            }
          }
          testID="thumbnail-item-button-2"
        >
          <Image
            source={
              {
                "uri": "https://reactnative.dev/img/tiny_logo.png",
              }
            }
            style={
              [
                {
                  "borderColor": "black",
                },
                {
                  "borderWidth": 1,
                  "height": 136,
                  "width": 136,
                },
              ]
            }
            testID="thumbnail-item-image-2"
          />
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "color": "black",
                },
                {
                  "fontSize": 16,
                  "fontWeight": "bold",
                  "textAlign": "center",
                },
              ]
            }
            testID="thumbnail-item-text-2"
          >
            Caption 3: t...
          </Text>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
              "padding": 8,
            }
          }
          testID="thumbnail-item-button-3"
        >
          <Image
            source={
              {
                "uri": "https://reactnative.dev/img/tiny_logo.png",
              }
            }
            style={
              [
                {
                  "borderColor": "white",
                },
                {
                  "borderWidth": 1,
                  "height": 136,
                  "width": 136,
                },
              ]
            }
            testID="thumbnail-item-image-3"
          />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
